Scripts/Utils/StellarParser/GeneratedFiles/StellarGeneratorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\programs\Godot\GloryOfRitiria\Parsers\StellarSystemParser\StellarGenerator.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace StellarSystemParser {

    using System.Globalization;
    using GloryOfRitiria.Scripts.Utils;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class StellarGeneratorParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		INT=32, FLOAT=33, ID=34, WORD=35, TEXT=36, WHITESPACE=37, COMMENT=38, 
		NEWLINE=39;
	public const int
		RULE_file = 0, RULE_stellar_system = 1, RULE_stellar_system_body = 2, 
		RULE_star = 3, RULE_star_body = 4, RULE_celestial_body = 5, RULE_celestial_body_body = 6, 
		RULE_satellites = 7, RULE_shipyards = 8, RULE_shipyard = 9, RULE_shipyard_body = 10, 
		RULE_ships = 11, RULE_ship = 12, RULE_ship_body = 13, RULE_modules = 14, 
		RULE_module = 15, RULE_name = 16, RULE_icon = 17, RULE_body_type = 18, 
		RULE_ship_size = 19, RULE_distance_from = 20, RULE_angle = 21, RULE_pull = 22, 
		RULE_body_distance = 23, RULE_building_progress = 24, RULE_star_class = 25, 
		RULE_discovery_status = 26, RULE_id = 27, RULE_text = 28, RULE_inty = 29, 
		RULE_floaty = 30;
	public static readonly string[] ruleNames = {
		"file", "stellar_system", "stellar_system_body", "star", "star_body", 
		"celestial_body", "celestial_body_body", "satellites", "shipyards", "shipyard", 
		"shipyard_body", "ships", "ship", "ship_body", "modules", "module", "name", 
		"icon", "body_type", "ship_size", "distance_from", "angle", "pull", "body_distance", 
		"building_progress", "star_class", "discovery_status", "id", "text", "inty", 
		"floaty"
	};

	private static readonly string[] _LiteralNames = {
		null, "'stellar_system'", "'{'", "'}'", "'star'", "'celestial_body'", 
		"'satellites'", "'shipyards'", "'shipyard'", "'ships'", "'ship'", "'modules'", 
		"'module'", "'durability'", "':'", "'name'", "'icon'", "'type'", "'size'", 
		"'distance_from_detnura'", "'map_angle'", "'gravitational_pull'", "'distance'", 
		"'building_progress'", "'star_class'", "'orange_dwarf'", "'red_dwarf'", 
		"'yellow_dwarf'", "'discovery_status'", "'explored'", "'existence_known'", 
		"'undiscovered'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "INT", "FLOAT", "ID", 
		"WORD", "TEXT", "WHITESPACE", "COMMENT", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StellarGenerator.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public StellarGeneratorParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(StellarGeneratorParser.Eof, 0); }
		public Stellar_systemContext[] stellar_system() {
			return GetRuleContexts<Stellar_systemContext>();
		}
		public Stellar_systemContext stellar_system(int i) {
			return GetRuleContext<Stellar_systemContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			StelSysGen.pt(StellarGeneratorPoint.Initmap);
			State = 64;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 63; stellar_system();
				}
				}
				State = 66;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__0 );
			StelSysGen.pt(StellarGeneratorPoint.Errorverification);
			State = 69; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stellar_systemContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Stellar_system_bodyContext stellar_system_body() {
			return GetRuleContext<Stellar_system_bodyContext>(0);
		}
		public Stellar_systemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stellar_system; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterStellar_system(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitStellar_system(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStellar_system(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Stellar_systemContext stellar_system() {
		Stellar_systemContext _localctx = new Stellar_systemContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_stellar_system);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(T__0);
			State = 72; id();
			StelSysGen.pt(StellarGeneratorPoint.Initsystem);
			State = 74; Match(T__1);
			State = 75; stellar_system_body();
			State = 76; Match(T__2);
			StelSysGen.pt(StellarGeneratorPoint.Addsystem);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stellar_system_bodyContext : ParserRuleContext {
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public Distance_fromContext distance_from() {
			return GetRuleContext<Distance_fromContext>(0);
		}
		public AngleContext angle() {
			return GetRuleContext<AngleContext>(0);
		}
		public PullContext pull() {
			return GetRuleContext<PullContext>(0);
		}
		public StarContext[] star() {
			return GetRuleContexts<StarContext>();
		}
		public StarContext star(int i) {
			return GetRuleContext<StarContext>(i);
		}
		public Stellar_system_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stellar_system_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterStellar_system_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitStellar_system_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStellar_system_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Stellar_system_bodyContext stellar_system_body() {
		Stellar_system_bodyContext _localctx = new Stellar_system_bodyContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_stellar_system_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; name();
			StelSysGen.pt(StellarGeneratorPoint.Setsystemname);
			State = 81; distance_from();
			State = 82; angle();
			State = 83; pull();
			State = 87;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 84; star();
				StelSysGen.pt(StellarGeneratorPoint.Addstar);
				}
				}
				State = 89;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__3 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StarContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Star_bodyContext star_body() {
			return GetRuleContext<Star_bodyContext>(0);
		}
		public StarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_star; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterStar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitStar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StarContext star() {
		StarContext _localctx = new StarContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_star);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(T__3);
			State = 92; id();
			StelSysGen.pt(StellarGeneratorPoint.Initstar);
			State = 94; Match(T__1);
			State = 95; star_body();
			State = 96; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Star_bodyContext : ParserRuleContext {
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public Star_classContext star_class() {
			return GetRuleContext<Star_classContext>(0);
		}
		public Discovery_statusContext discovery_status() {
			return GetRuleContext<Discovery_statusContext>(0);
		}
		public Celestial_bodyContext[] celestial_body() {
			return GetRuleContexts<Celestial_bodyContext>();
		}
		public Celestial_bodyContext celestial_body(int i) {
			return GetRuleContext<Celestial_bodyContext>(i);
		}
		public ShipsContext[] ships() {
			return GetRuleContexts<ShipsContext>();
		}
		public ShipsContext ships(int i) {
			return GetRuleContext<ShipsContext>(i);
		}
		public Star_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_star_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterStar_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitStar_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStar_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Star_bodyContext star_body() {
		Star_bodyContext _localctx = new Star_bodyContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_star_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; name();
			StelSysGen.pt(StellarGeneratorPoint.Setstarname);
			State = 101;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__23) {
				{
				State = 100; star_class();
				}
			}

			State = 104;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__27) {
				{
				State = 103; discovery_status();
				}
			}

			State = 111;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__4) {
				{
				{
				State = 106; celestial_body();
				StelSysGen.pt(StellarGeneratorPoint.Addbodytostar);
				}
				}
				State = 113;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 117;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__8) {
				{
				{
				State = 114; ships();
				}
				}
				State = 119;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Celestial_bodyContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public Celestial_body_bodyContext celestial_body_body() {
			return GetRuleContext<Celestial_body_bodyContext>(0);
		}
		public Celestial_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_celestial_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterCelestial_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitCelestial_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCelestial_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Celestial_bodyContext celestial_body() {
		Celestial_bodyContext _localctx = new Celestial_bodyContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_celestial_body);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(T__4);
			State = 121; id();
			StelSysGen.pt(StellarGeneratorPoint.Initbody);
			State = 123; Match(T__1);
			State = 124; celestial_body_body();
			State = 125; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Celestial_body_bodyContext : ParserRuleContext {
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public Body_typeContext body_type() {
			return GetRuleContext<Body_typeContext>(0);
		}
		public Body_distanceContext body_distance() {
			return GetRuleContext<Body_distanceContext>(0);
		}
		public IconContext icon() {
			return GetRuleContext<IconContext>(0);
		}
		public Discovery_statusContext discovery_status() {
			return GetRuleContext<Discovery_statusContext>(0);
		}
		public SatellitesContext[] satellites() {
			return GetRuleContexts<SatellitesContext>();
		}
		public SatellitesContext satellites(int i) {
			return GetRuleContext<SatellitesContext>(i);
		}
		public ShipyardsContext[] shipyards() {
			return GetRuleContexts<ShipyardsContext>();
		}
		public ShipyardsContext shipyards(int i) {
			return GetRuleContext<ShipyardsContext>(i);
		}
		public ShipsContext[] ships() {
			return GetRuleContexts<ShipsContext>();
		}
		public ShipsContext ships(int i) {
			return GetRuleContext<ShipsContext>(i);
		}
		public Celestial_body_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_celestial_body_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterCelestial_body_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitCelestial_body_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCelestial_body_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Celestial_body_bodyContext celestial_body_body() {
		Celestial_body_bodyContext _localctx = new Celestial_body_bodyContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_celestial_body_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127; name();
			StelSysGen.pt(StellarGeneratorPoint.Setbodyname);
			State = 130;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__21) {
				{
				State = 129; body_distance();
				}
			}

			State = 135;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__15) {
				{
				State = 132; icon();
				StelSysGen.pt(StellarGeneratorPoint.Setbodyicon);
				}
			}

			State = 138;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__27) {
				{
				State = 137; discovery_status();
				}
			}

			State = 140; body_type();
			StelSysGen.pt(StellarGeneratorPoint.Setbodytype);
			State = 147;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__5) {
				{
				{
				State = 142; satellites();
				StelSysGen.pt(StellarGeneratorPoint.Setisntsatellite);
				}
				}
				State = 149;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 153;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__6) {
				{
				{
				State = 150; shipyards();
				}
				}
				State = 155;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 159;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__8) {
				{
				{
				State = 156; ships();
				}
				}
				State = 161;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SatellitesContext : ParserRuleContext {
		public Celestial_bodyContext[] celestial_body() {
			return GetRuleContexts<Celestial_bodyContext>();
		}
		public Celestial_bodyContext celestial_body(int i) {
			return GetRuleContext<Celestial_bodyContext>(i);
		}
		public SatellitesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_satellites; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterSatellites(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitSatellites(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSatellites(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SatellitesContext satellites() {
		SatellitesContext _localctx = new SatellitesContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_satellites);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162; Match(T__5);
			StelSysGen.pt(StellarGeneratorPoint.Setissatellite);
			State = 164; Match(T__1);
			State = 168;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 165; celestial_body();
				StelSysGen.pt(StellarGeneratorPoint.Addsatellitetoparent);
				}
				}
				State = 170;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__4 );
			State = 172; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShipyardsContext : ParserRuleContext {
		public ShipyardContext[] shipyard() {
			return GetRuleContexts<ShipyardContext>();
		}
		public ShipyardContext shipyard(int i) {
			return GetRuleContext<ShipyardContext>(i);
		}
		public ShipyardsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shipyards; } }
		public override void EnterRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.EnterShipyards(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IStellarGeneratorListener typedListener = listener as IStellarGeneratorListener;
			if (typedListener != null) typedListener.ExitShipyards(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStellarGeneratorVisitor<TResult> typedVisitor = visitor as IStellarGeneratorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShipyards(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShipyardsContext shipyards() {
		ShipyardsContext _localctx = new ShipyardsContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_shipyards);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; Match(T__6);
			State = 175; Match(T__1);
			State = 179;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 176; shipyard();
				StelSysGen.pt(StellarGeneratorPoint.Addshipyard);
				}
				}
				State = 181;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__7 );
			State = 183; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
